# wzero

./: README.md  __init__.py  binarization.py  data.py  experiments2.py  mapping.py  metrics.py  plots.py  test.py
datasets/: __init__.py  dataset.py  image.py  image_rgb.py  utils.py
datasets/datasets/: __init__.py  cifar10.py  ecoli.py  eeg_eye_state.py  fashion_mnist.py  glass.py  magic_gamma_telescope.py  mnist.py  satimage.py  segment.py  shuttle.py  (+1 more)
experiments/: __init__.py  experiment.py  hyperparameters.py  kfold.py  mappings.py  preprocessings.py  train_and_test.py
models/: __init__.py  bleaching_bloom_wisard.py  bleaching_wisard.py  bleaching_wisard15.py  bleaching_wisard2.py  bloom_ram_wisard.py  bloom_wisard.py  bloom_wisard2.py  bloom_wisard3.py  bloom_wisard4.py  bloom_wisard5.py  bloom_wisard55.py  prob_wisard.py  regression_wisard.py  wisard.py  wisard2.py  wisardpc1D.py  wisardpc2D.py
models/wrappers/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  base_bind.h  bleaching_bloom_wisard_bind.cc  bleaching_wisard15_bind.cc  bleaching_wisard2_bind.cc  bleaching_wisard_bind.cc  bloom_ram_wisard_bind.cc  bloom_wisard2_bind.cc  bloom_wisard3_bind.cc  bloom_wisard4_bind.cc  bloom_wisard55_bind.cc  bloom_wisard5_bind.cc  bloom_wisard_bind.cc  cmake_install.cmake  example.py  file  prob_wisard_bind.cc  pseudoconv1D_bind.cc  pseudoconv2D_bind.cc  regression_wisard_bind.cc  test.cc  test.py  wisard2_bind.cc  wisard3_bind.cc  wisard_bind.cc  wnnc.cc
models/wrappers/utils/: array_conversion.h  file  test.cc
utils/: __init__.py  timing.py  utils.py
(+31 files in other folders)
